--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,8 @@
     --dark: #131313;
     --orange: #FF900E;
     --red: #ff0000b9;
+    --gold-white: #faebd7;
+    --white: #ffffff;
 }
 
 html {
@@ -22,16 +24,7 @@ html {
     margin: 0 auto;
 }
 
-/* body{
-    width: 100%;
-    max-width: 80rem;
-    margin: 0 auto;
-} */
-
-
-
 /* ___ common classes ___ */
-
 h1 {
     font-size: 3rem;
     font-weight: 700;
@@ -55,12 +48,13 @@ h3 {
 .section-desc {
     font-size: 1.5rem;
     margin: 2rem auto;
-    line-height: 2rem;
+    line-height: 1.5rem;
 }
 
 .small-desc {
     font-size: 1.4rem;
     margin: 1rem auto;
+    line-height: 2rem;
 }
 
 .btn-primary {
@@ -68,10 +62,17 @@ h3 {
     border: none;
     border-radius: .5rem;
     font-size: 1.4rem;
-    color: #fff;
+    color: var(--white);
     font-weight: 500;
     padding: 1rem 1.5rem;
     cursor: pointer;
+}
+#features,
+#more-features,
+#facts, 
+#choice,
+#sponsors{
+    margin: 10rem auto;
 }
 
 .light-gray {
@@ -86,9 +87,7 @@ h3 {
     color: var(--orange);
 }
 
-
 /* ___ navbar styling ___ */
-
 header {
     margin-bottom: 10rem;
 }
@@ -114,15 +113,10 @@ nav ul a {
     color: var(--gray);
 }
 
-
-
-/* ___ banner styling ___ */
-
-
-
+                          /* ___ banner styling ___ */
 .banner-text {
     text-align: center;
-    margin: 5rem auto;
+    margin: 10rem auto;
 }
 
 .banner-image {
@@ -130,17 +124,12 @@ nav ul a {
 }
 
 img {
-    /* height: fit-content; */
     width: 100%;
     margin: 0 auto;
 }
 
-
-
-/* ___ features styling */
-
+                            /* ___ features styling */
 #features {
-    margin: 10rem auto;
     padding: .5rem;
     /* background-color: orange; */
     display: flex;
@@ -161,16 +150,12 @@ img {
     width: 50%;
 }
 
-
-
 /* ___ more features styling ___ */
-
 #more-features {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
     gap: 2rem;
-    margin: 10rem auto;
     position: relative;
 }
 
@@ -185,7 +170,8 @@ img {
 
 .more-features-body>div {
     padding-left: 1rem;
-    background-color: antiquewhite;
+    /* background-color: #faebd7; */
+    background-color: var(--gold-white);
     margin: 2rem;
     box-shadow: 2px 2px 7px .1px var(--light-gray);
 }
@@ -194,7 +180,7 @@ img {
     width: 50%;
 }
 
-#more-features img {
+.more-features-image img {
     height: 100%;
     width: 100%;
 }
@@ -211,15 +197,7 @@ img {
     left: 50%;
 }
 
-
-
-
 /* ___ facts styling ___ */
-
-#facts {
-    margin: 10rem auto;
-}
-
 .facts-box {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -266,7 +244,6 @@ img {
     transform: scale(300);
 }
 
-
 /* ___ choice styling ___ */
 
 
@@ -280,7 +257,7 @@ img {
     overflow: hidden;
     margin-bottom: 5rem;
     padding: .5rem;
-    background-color: antiquewhite;
+    background-color: var(--gold-white);
 }
 
 #choice>div:nth-child(2n) {
@@ -312,15 +289,15 @@ img {
 }
 
 /* ___ sponsors styling ___ */
-
-
 #sponsors {
-    margin: 10rem auto;
     text-align: center;
 }
 
 .sponsors-text {
     margin-bottom: 5rem;
+    text-align: center;
+    width: 70%;
+    margin: 5rem auto;
 }
 
 .sponsors-image {
@@ -335,35 +312,32 @@ img {
     filter: grayscale();
 }
 
-
 /* ___ footer styling ___ */
-
-
 footer {
-    background-color: var(--orange);
+    background-color: var(--gold-white);
     height: 4rem;
     text-align: center;
-    margin: 10rem auto;
+    font-weight: 700;
+    margin: 5rem auto;
     display: flex;
     align-items: center;
 }
 
 
-/* ____ responsive styling ____ */
+
+                        /* ____ responsive design making ____ */
 
 @media screen and (max-width: 576px) {
     body {
         width: 90%;
         margin: 0 auto;
     }
-
     h1 {
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
     h2 {
         font-size: 1.8rem;
     }
-    
     h3 {
         font-size: 1.6rem;
         font-weight: 600;
@@ -382,6 +356,7 @@ footer {
         padding: .8rem 1rem;
     }
 
+                            /* ___header responsive___ */
     header {
         margin-bottom: 1rem;
     }
@@ -392,127 +367,173 @@ footer {
         font-weight: 500;
     }
 
+                            /* ___ features responsive___ */
+    #features {
+        margin: 10rem auto;
+        flex-direction: column;
+    }
+    #features .features-image {
+        width: 100%;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .features-text {
+        width: 100%;
+    }
 
+                            /* ___ more features responsive ___ */
+    #more-features {
+        display: block;
+        margin: 5rem auto;
+    }
+    .more-features-text {
+        width: 100%;
+        margin: 3rem auto;
+    }
+    .more-features-body>div {
+        padding: 1rem;
+        margin: 3rem auto;
+    }
+    .more-features-image {
+        width: 100%;
+    }
+    .large-btn-div {
+        margin: 1rem auto;
+        text-align: center;
+    }
+    .large-btn {
+        font-size: 1.5rem;
+    }
+    .btn-exceptional {
+        width: 10rem;
+        position: static;
+    }
 
-    /* ___ features styling */
+                            /* ___ facts responsive ___ */
+    #facts h1 {
+        text-align: center;
+    }
+    .facts-box {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1.5rem;
+    }
 
-/* #features {
-    margin: 5rem auto;
-    padding: .5rem;
-    display: flex;
-    display: block;
-    justify-content: space-between;
-    align-items: center;
-    gap: 5rem;
-}
+                            /* ___ choice responsive ___ */
+    #choice>div {
+        flex-direction: column;
+        border: .1px solid var(--orange);
+        height: 35rem;
+        padding: 0;
+        text-align: center;
+    }
+    #choice>div:nth-child(2n) {
+        text-align: center;
+    }
+    #choice>div:nth-child(2n) img {
+        object-position: top;
+    }
+    #choice h1 {
+        margin: 4rem auto;
+    }
+    .choice-image {
+        width: 100%;
+        height: 50%;
+    }
+    .choice-text {
+        margin-top: 2rem;
+        width: 100%;
+        height: 50%;
+    }
 
-#features .features-image {
-    width: 50%;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: .5rem;
-    row-gap: .2rem;
-}
+                                /* ___ sponsors responsive ___ */
+    #sponsors {
+        margin: 5rem auto;
+    }
+    .sponsors-text {
+        margin-bottom: 3rem;
+        width: 100%;
+    }
+    .sponsors-image {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
 
-.features-text {
-    width: 50%;
-} */
-
-
-/* ___ more features styling ___ */
-
-#more-features {
-    display: block;
-    margin: 5rem auto;
-}
-
-.more-features-text {
-    width: 100%;
-    margin: 3rem auto;
-}
-
-.more-features-body > div {
-    padding: 1rem;
-    margin: 3rem auto;
-}
-.more-features-image {
-    width: 100%;
-}
-.large-btn-div{
-    margin: 1rem auto;
-    text-align: center;
-}
-.large-btn {
-    font-size: 1.5rem;
-}
-.btn-exceptional {
-    width: 10rem;
-    position: static;
-}
-
-/* ___ facts responsive ___ */
-
-#facts {
-    margin: 5rem auto;
-}
-#facts h1{
-    text-align: center;
-}
-.facts-box {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 3rem;
-}
-
-
-/* ___ choice styling ___ */
-
-
-#choice>div {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    gap: 1rem;
-    border: .1px solid var(--orange);
-    height: 35rem;
-    /* height: 30%; */
-    margin-bottom: 3rem;
-    padding: 0;
-    text-align: center;
-}
-
-#choice > div:nth-child(2n) {
-    text-align: center;
-}
-#choice > div:nth-child(2n) img {
-    object-position: top;
-}
-#choice h1 {
-    margin-bottom: 4rem;
-}
-.choice-image {
-    width: 100%;
-    height: 50%;
-}
-.choice-text {
-    margin-top: 2rem;
-    width: 100%;
-    height: 50%;
 }
 
 
-/* ___ sponsors styling ___ */
+@media screen and (min-width: 577px) and (max-width: 768px) {
+    body {
+        width: 80%;
+        margin: 0 auto;
+    }
 
+                            /* ___ more features styling ___ */
 
-#sponsors {
-    margin: 5rem auto;
-}
-.sponsors-text {
-    margin-bottom: 3rem;
-}
-.sponsors-image {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    #more-features {
+        display: block;
+    }
+    .more-features-text {
+        width: 100%;
+    }
+    .more-features-body>div {
+        padding: 1rem;
+    }
+    .more-features-image {
+        width: 100%;
+    }
+    .large-btn-div {
+        margin: 3rem auto;
+        text-align: center;
+    }
+    .large-btn {
+        font-size: 2rem;
+    }
+    .btn-exceptional {
+        position: static;
+    }
+
+                            /* ___ facts responsive ___ */
+
+    #facts h1 {
+        text-align: center;
+    }
+    .facts-box {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 1.5rem;
+    }
+
+                            /* ___ choice styling ___ */
+
+    #choice>div {
+        flex-direction: column;
+        border: .1px solid var(--orange);
+        height: 45rem;
+        padding: 0;
+        text-align: center;
+    }
+    #choice>div:nth-child(2n) {
+        text-align: center;
+    }
+    #choice>div:nth-child(2n) img {
+        object-position: top;
+    }
+    .choice-image {
+        width: 100%;
+        height: 50%;
+    }
+    .choice-text {
+        margin-top: 2rem;
+        width: 100%;
+        height: 50%;
+    }
+
 }
 
+@media screen and (min-width: 1200px) {
+    html{
+        /* width: 100%; */
+        max-width: 90%;
+        margin: 0 auto;
+    }
 }
