--- a/styles/style.css
+++ b/styles/style.css
@@ -400,6 +400,7 @@ footer {
         height: 50%;
     }
     .choice-text {
+        padding: 1rem;
         margin-top: 2rem;
         width: 100%;
         height: 50%;
